--- a/estilos.css
+++ b/estilos.css
@@ -1,30 +1,50 @@
-header {
-    display: block;
-    padding: 18px 18px;
+nav {
+
+    
+}
+    nav ul {
+        list-style-type: none;
+        font-size: 12pt;
+        margin: 0;
+        padding: 0;
+        align-content:center;
+        overflow:auto;
+        background-color: #023771;
+       
+    }
+
+nav li {
+    float:left;
+}
+
+nav li a {
+        display: block; 
+        text-decoration: none; 
+        color: white;
+        padding: 14px 16px;
+}
+
+    nav li a:hover {
+        background-color: #2134FF;
+        color: yellow;
+    }
+.menu {
     text-align:center;
 }
 
-ul {
-    list-style-type: none; /* Barra de navegação não precisa de marcador */
-    margin: 0;
-    padding: 0;
-    background-color: #333333;
-    overflow: hidden;
-    text-align: center;
+header{
+    text-align:center;
+    padding: 15px;
+    font-size:200%;
+    font-display:block;
 }
 
-li {
-    float:left;
-}
-    /* Faz com que os blocos fiquem um ao lado do outro */
-    li a {
-        display: block; /* Faz com que todo o bloco seja um link */
-        text-decoration: none; /* Remove a aparência de link */
-        color: white;
-        padding: 14px 16px;
-    }
+/* Fim da estilização do HEADER*/
 
-        li a:hover {
-            background-color: #0000FF;
-            color: white;
-        }
+/* Início da estilização do HOME*/
+
+nav iframe {
+    border:none;
+    width:"100%";
+    height:"50%";
+}
