--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -1,3 +1,10 @@
 h1 {
     text-align: center;
 }
+
+canvas {
+    text-align: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
